--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -157,6 +157,9 @@
 <!ENTITY Ctr_alt_newtabp	"Nový panel (about:newtab): alternativní vzhled">
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
+<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
+<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
+<!ENTITY Ctr_osearch_dm		"Small dropmarker">
 <!ENTITY Ctr_addonmanager	"Správce rozšíření">
 <!ENTITY Ctr_alt_addonsp	"Stránka rozšíření lišty 'další info': alternativní vzhled">
 <!ENTITY Ctr_alt_addonsm	"Správce rozšíření: alternativní vzhled">
