--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -157,6 +157,9 @@
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
 <!ENTITY Ctr_ctroldsearch	"Alte 'Suche'">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
+<!ENTITY Ctr_search_oit		"Suche in neuen Tab öffnen (about:config Einstellung)">
+<!ENTITY Ctr_osearch_meoit	"Mittelklicks: Suche im Vordergrund-Tab öffnen">
+<!ENTITY Ctr_osearch_dm		"Kleinere Aufklapp-Schaltfläche">
 <!ENTITY Ctr_addonmanager	"Add-on Manager">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
@@ -220,7 +223,7 @@
 <!ENTITY Ctr_hideurelstop	"Entferne 'Stopp' &amp; 'Neu laden'">
 <!ENTITY Ctr_hideurlgo		"Entferne 'Los'">
 <!ENTITY Ctr_hideurlsrg		"Entferne 'Neu laden, Stopp &amp; Los' Trennlinien &amp; Leerstellen">
-<!ENTITY Ctr_urlbardropm	"Verschiebe die 'Schaltfläche' an die letztmögliche Position">
+<!ENTITY Ctr_urlbardropm	"Verschiebe die Aufklapp-Schaltfläche an die letztmögliche Position">
 <!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
 <!ENTITY Ctr_hideprbutton	"Verstecke 'Infosymbol' (wenn ein Popup-Fenster blockiert wurde)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
