--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -157,6 +157,9 @@
 <!ENTITY Ctr_alt_newtabp	"Uue kaardi leht (about:newtab): alternatiivne välimus">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
+<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
+<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
+<!ENTITY Ctr_osearch_dm		"Small dropmarker">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
 <!ENTITY Ctr_alt_addonsm	"Alternatiivne välimus">
