--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -157,7 +157,7 @@
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
 <!ENTITY Ctr_ctroldsearch	"Alte 'Suche'">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
-<!ENTITY Ctr_search_oit		"Suche in neuen Tab öffnen (about:config Einstellung)">
+<!ENTITY Ctr_search_oit		"Suche in neuem Tab öffnen (about:config Einstellung)">
 <!ENTITY Ctr_osearch_meoit	"Mittelklicks: Suche im Vordergrund-Tab öffnen">
 <!ENTITY Ctr_osearch_dm		"Kleinere Aufklapp-Schaltfläche">
 <!ENTITY Ctr_addonmanager	"Add-on Manager">
