--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Zeige große Symbole">
 <!ENTITY Ctr_nav_txt_ico2	"Zeige Symbole und Text">
 <!ENTITY Ctr_nav_txt_ico3	"Zeige nur Text">
-<!ENTITY Ctr_nav_txt_exp	"Experimentelle Attribute:">
+<!ENTITY Ctr_nav_txt_exp	"Klassische Attribute (experimentell):">
 <!ENTITY Ctr_iat_notf_vt	"Vertikale Leisten ausschließen">
 <!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Aufklappmenüs' (Lesezeichen, Chronik etc.)">
 <!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: verstecke Schaltfläche 'Normalgröße'">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Add-on 'Übersicht': Warnungen ausblenden">
 <!ENTITY Ctr_am_compact		"Add-on 'Übersicht': Kompakte Darstellung">
 <!ENTITY Ctr_am_compact2	"Kompakte Darstellung +">
+<!ENTITY Ctr_am_highlight	"Add-on 'Übersicht': Eintrag beim 'Hovern' hervorheben">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
