--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Εμφάνιση μεγάλων εικονιδίων">
 <!ENTITY Ctr_nav_txt_ico2	"Εμφάνιση εικονιδίων και κειμένου">
 <!ENTITY Ctr_nav_txt_ico3	"Εμφάνιση μόνο κειμένου">
-<!ENTITY Ctr_nav_txt_exp	"Πειραματικά χαρακτηριστικά:">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Εξαιρούνται κατακόρυφες εργαλειοθήκες">
 <!ENTITY Ctr_cpanelmenus	"Αναδυόμενα μενού πίνακα (σελιδοδείκτες, ιστορικό κλπ): συνεπτυγμένη προβολή">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων: απόκρυψη προειδοποιήσεων">
 <!ENTITY Ctr_am_compact		"Λίστες πρόσθετων: συμπαγής προβολή">
 <!ENTITY Ctr_am_compact2	"Συμπαγής προβολή +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση «about:config»)">
 <!ENTITY Ctr_bmbutton		"Κουμπί μενού σελιδοδεικτών">
