--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Afficher de grandes icônes">
 <!ENTITY Ctr_nav_txt_ico2	"Afficher icônes et textes">
 <!ENTITY Ctr_nav_txt_ico3	"Afficher seulement les textes">
-<!ENTITY Ctr_nav_txt_exp	"Attribut (expérimental) :">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Exclure les barres d'outils verticales">
 <!ENTITY Ctr_cpanelmenus	"Compacter les panneaux (marque-pages, historique, etc.)">
 <!ENTITY Ctr_hidezoomres	"Boutons de zoom (si sur une barre d'outils) : Masquer le bouton « Réinitialiser le niveau de zoom »">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Listes de modules : cacher les alertes">
 <!ENTITY Ctr_am_compact		"Listes de modules : vue compacte">
 <!ENTITY Ctr_am_compact2	"Vue compacte +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Listes de modules : afficher la version du module">
 <!ENTITY Ctr_xpinstallui	"Ancienne fenêtre d'installation de modules (préférence about:config)">
 <!ENTITY Ctr_bmbutton		"Bouton Marque-pages">
