--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Wulke symbole pokazać">
 <!ENTITY Ctr_nav_txt_ico2	"Symbole a tekst pokazać">
 <!ENTITY Ctr_nav_txt_ico3	"Jenož tekst pokazać">
-<!ENTITY Ctr_nav_txt_exp	"Eksperimentalne atributy:">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Wertikalne symbolowe lajsty wuzamknyć">
 <!ENTITY Ctr_cpanelmenus	"Menijowe wuskakowace wokna (čitasske znamjenja, historija atd.): kompaktny napohlad">
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Lisćiny přidatkow: Warnowanja schować">
 <!ENTITY Ctr_am_compact		"Lisćiny přidatkow: kompatkny napohlad">
 <!ENTITY Ctr_am_compact2	"Kompaktny napohlad +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
