--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Prikaži velike ikone">
 <!ENTITY Ctr_nav_txt_ico2	"Prikaži ikone in besedilo">
 <!ENTITY Ctr_nav_txt_ico3	"Prikaži samo besedilo">
-<!ENTITY Ctr_nav_txt_exp	"Preskusni atributi:">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Izključi navpične orodne vrstice">
 <!ENTITY Ctr_cpanelmenus	"Ploščasti meniji: strnjen pogled (zaznamki, zgodovina itd.)">
 <!ENTITY Ctr_hidezoomres	"Nadzorni gumbi za povečavo na orodni vrstici: skrij gumb za ponastavitev povečave">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Seznami dodatkov Upravitelja dodatkov: skrij opozorila">
 <!ENTITY Ctr_am_compact		"Seznami dodatkov: strnjen pogled">
 <!ENTITY Ctr_am_compact2	"Strnjen pogled +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Stran dodatkov: prikaži različico dodatka">
 <!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (nastavitev about:config)">
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
