--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Geniş butonlar göster">
 <!ENTITY Ctr_nav_txt_ico2	"Buton ve yazı göster">
 <!ENTITY Ctr_nav_txt_ico3	"Sadece yazıyı göster">
-<!ENTITY Ctr_nav_txt_exp	"Deneysel özellikler:">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Değil dikey araç çubukları için değil">
 <!ENTITY Ctr_cpanelmenus	"Panel menu: tümleşik görünüm (yerimleri, geçmiş vb.)">
 <!ENTITY Ctr_hidezoomres	"Araç çubuğunda zoom kontrolü: zoom-reset butonu gizle">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Add-on lists: hide warnings">
 <!ENTITY Ctr_am_compact		"Add-on lists: compact view">
 <!ENTITY Ctr_am_compact2	"Compact view +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutton		"Yer imleri menü düğmesi">
