--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Показувати великі іконки">
 <!ENTITY Ctr_nav_txt_ico2	"Показувати іконки і текст">
 <!ENTITY Ctr_nav_txt_ico3	"Показувати тільки текст">
-<!ENTITY Ctr_nav_txt_exp	"Експериментальні атрибути:">
+<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Не для вертикальних панелей інструментів">
 <!ENTITY Ctr_cpanelmenus	"Панель меню: компактний вигляд (закладки, історія тощо)">
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
@@ -166,6 +166,7 @@
 <!ENTITY Ctr_am_nowarning	"Список додатків у Менеджері додатків: приховати попередження">
 <!ENTITY Ctr_am_compact		"Список додатків: компактний вигляд">
 <!ENTITY Ctr_am_compact2	"Компактний вигляд +">
+<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
