--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -150,7 +150,7 @@
 <!ENTITY Ctr_nav_txt_ico1	"Näita suuri ikoone">
 <!ENTITY Ctr_nav_txt_ico2	"Näita ikoone ja teksti">
 <!ENTITY Ctr_nav_txt_ico3	"Näita ainult teksti">
-<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
+<!ENTITY Ctr_nav_txt_exp	"Klassikalised atribuudid (katsejärgus):">
 <!ENTITY Ctr_iat_notf_vt	"Välista vertikaalsed tööriistaribad">
 <!ENTITY Ctr_cpanelmenus	"Paneelimenüüd (järjehoidjad, ajalugu jms.): kompaktne vaade">
 <!ENTITY Ctr_hidezoomres	"Suurendamise juhtnupud tööriistaribal: peida suurendamise lähtestamise nupp">
@@ -163,11 +163,11 @@
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
 <!ENTITY Ctr_alt_addonsm	"Alternatiivne välimus">
-<!ENTITY Ctr_am_nowarning	"Laienduste loend: peida hoiatused">
-<!ENTITY Ctr_am_compact		"Laienduste loend: kompaktne vaade">
+<!ENTITY Ctr_am_nowarning	"Laienduste loendid: peida hoiatused">
+<!ENTITY Ctr_am_compact		"Laienduste loendid: kompaktne vaade">
 <!ENTITY Ctr_am_compact2	"Kompaktne vaade +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
-<!ENTITY Ctr_addonversion	"Laienduste loend: näita lisade versiooni">
+<!ENTITY Ctr_am_highlight	"Laienduste loendid: hiirega peale minnes tõsta kirjed esile">
+<!ENTITY Ctr_addonversion	"Laienduste loendid: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
