--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -318,7 +318,6 @@
 
 <!ENTITY Ctr_otherctroptns	"Další nastavení">
 <!ENTITY Ctr_cuibotbuttons	"Vlastní tlačítka v režimu 'přizpůsobení'">
-<!ENTITY Ctr_bookmarkoinpw	"'Otevřít v novém anonymním okně' položky ze záložek v kontextovém menu">
 <!ENTITY Ctr_nodevtheme		"Zabránit povolení 'Developer Theme'">
 
 <!ENTITY Ctr_experttweaks	"Pokročilé">
@@ -355,20 +354,19 @@
 <!ENTITY Ctr_support		"Fórum podpory">
 <!ENTITY Ctr_newversion		"Nová verze?">
 
-<!ENTITY Ctr_addon-bar.accesskey	"D">
-<!ENTITY Ctr_openInPrivateWindow	"Otevřít v novém anonymním okně">
-<!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
+<!ENTITY Ctr_addon-bar.accesskey		"D">
 <!ENTITY appMenuGettingStarted.label	"Začínáme">
-<!ENTITY goCmd.label		"Přejít">
+<!ENTITY goCmd.label					"Přejít">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
-<!ENTITY backCmd.accesskey            "Z">
-<!ENTITY forwardCmd.accesskey         "V">
-<!ENTITY reloadCmd.accesskey          "O">
-<!ENTITY stopCmd.accesskey            "a">
-<!ENTITY bookmarkPageCmd2.accesskey   "d">
+<!ENTITY backCmd.accesskey				"Z">
+<!ENTITY forwardCmd.accesskey			"V">
+<!ENTITY reloadCmd.accesskey			"O">
+<!ENTITY stopCmd.accesskey				"a">
+<!ENTITY bookmarkPageCmd2.accesskey		"d">
 
-<!-- Fallback entities. Leave empty! -->
-<!ENTITY openCmd.commandkey			"">
-<!ENTITY urlbar.accesskey			"">
-<!ENTITY urlbar.placeholder2		"">
+<!-- Fallback entities. Do not change! -->
+<!ENTITY openCmd.commandkey				"">
+<!ENTITY urlbar.accesskey				"">
+<!ENTITY urlbar.placeholder2			"">
+
