--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -318,7 +318,6 @@
 
 <!ENTITY Ctr_otherctroptns	"Andere Einstellungen">
 <!ENTITY Ctr_cuibotbuttons	"Einstellungsschaltflächen im Modus 'Anpassen'">
-<!ENTITY Ctr_bookmarkoinpw	"'In neuem privaten Fenster öffnen'-Eintrag im Kontextmenu eines Lesezeichens">
 <!ENTITY Ctr_nodevtheme		"Aktivierung des 'Entwickler-Themas' unterbinden">
 
 <!ENTITY Ctr_experttweaks	"Erweitert">
@@ -355,20 +354,18 @@
 <!ENTITY Ctr_support		"Hilfe-Forum">
 <!ENTITY Ctr_newversion		"Neue Version?">
 
-<!ENTITY Ctr_addon-bar.accesskey	"A">
-<!ENTITY Ctr_openInPrivateWindow	"In neuem privaten Fenster öffnen">
-<!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
+<!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
-<!ENTITY goCmd.label		"Los">
+<!ENTITY goCmd.label					"Los">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
-<!ENTITY backCmd.accesskey            "Z">
-<!ENTITY forwardCmd.accesskey         "V">
-<!ENTITY reloadCmd.accesskey          "N">
-<!ENTITY stopCmd.accesskey            "S">
-<!ENTITY bookmarkPageCmd2.accesskey   "L">
+<!ENTITY backCmd.accesskey				"Z">
+<!ENTITY forwardCmd.accesskey			"V">
+<!ENTITY reloadCmd.accesskey			"N">
+<!ENTITY stopCmd.accesskey				"S">
+<!ENTITY bookmarkPageCmd2.accesskey		"L">
 
-<!-- Fallback entities. Leave empty! -->
-<!ENTITY openCmd.commandkey			"">
-<!ENTITY urlbar.accesskey			"">
-<!ENTITY urlbar.placeholder2		"">
+<!-- Fallback entities. Do not change! -->
+<!ENTITY openCmd.commandkey				"">
+<!ENTITY urlbar.accesskey				"">
+<!ENTITY urlbar.placeholder2			"">
