--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -318,7 +318,6 @@
 
 <!ENTITY Ctr_otherctroptns	"Druge nastajenja">
 <!ENTITY Ctr_cuibotbuttons	"Wósebne tłocaški w 'pśiměrjeńskem' modusu">
-<!ENTITY Ctr_bookmarkoinpw	"'Zapisk 'W nowem priwatnem woknje wócyniś' w kontekstowem meniju cytańskich znamjenjow">
 <!ENTITY Ctr_nodevtheme		"Zmóžnjenjeju 'wuwijarskeje drastwy' zajźowaś">
 
 <!ENTITY Ctr_experttweaks	"Rozšyrjone">
@@ -355,20 +354,18 @@
 <!ENTITY Ctr_support		"Pódpěrowański forum">
 <!ENTITY Ctr_newversion		"Nowa wersija?">
 
-<!ENTITY Ctr_addon-bar.accesskey	"R">
-<!ENTITY Ctr_openInPrivateWindow	"W nowem priwatnem woknje wócyniś">
-<!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
+<!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
-<!ENTITY goCmd.label		"Start">
+<!ENTITY goCmd.label					"Start">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
-<!ENTITY backCmd.accesskey            "S">
-<!ENTITY forwardCmd.accesskey         "D">
-<!ENTITY reloadCmd.accesskey          "Z">
-<!ENTITY stopCmd.accesskey            "t">
-<!ENTITY bookmarkPageCmd2.accesskey   "c">
+<!ENTITY backCmd.accesskey				"S">
+<!ENTITY forwardCmd.accesskey			"D">
+<!ENTITY reloadCmd.accesskey			"Z">
+<!ENTITY stopCmd.accesskey				"t">
+<!ENTITY bookmarkPageCmd2.accesskey		"c">
 
-<!-- Fallback entities. Leave empty! -->
-<!ENTITY openCmd.commandkey			"">
-<!ENTITY urlbar.accesskey			"">
-<!ENTITY urlbar.placeholder2		"">
+<!-- Fallback entities. Do not change! -->
+<!ENTITY openCmd.commandkey				"">
+<!ENTITY urlbar.accesskey				"">
+<!ENTITY urlbar.placeholder2			"">
